log
Wed, Mar 26, 2025  8:35:31 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  8:40:00 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: 'List {aka struct List}' has no member named 'size'
     list->size = 0;
         ^~
Compilation failed
b693226
Wed, Mar 26, 2025  8:40:19 AM: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
ef315ad
Wed, Mar 26, 2025  8:40:50 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
9b6540b
Wed, Mar 26, 2025  8:42:42 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
180c9ec
Wed, Mar 26, 2025  8:45:18 AM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2b5eedb
Wed, Mar 26, 2025  8:48:11 AM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a446fe3
Wed, Mar 26, 2025  8:49:23 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
31d4e67
Wed, Mar 26, 2025  9:03:56 AM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:67:5: error: expected ',' or ';' before 'list'
     list->current->next = nodoActual;
     ^~~~
list.c: In function 'nextList':
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
d85bc0e
Wed, Mar 26, 2025  9:04:42 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e6edbfb
Wed, Mar 26, 2025  9:05:35 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
740992e
